--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 #root {
+    display: flex;
     flex-wrap: wrap;
     column-gap: 10px;
     row-gap: 10px;
+}
+
+div {
+    box-sizing: border-box;
+}
+
+.users {
+    flex: 0.5;
+    border: 1px solid grey;
+    padding: 10px;
+}
+
+.posts {
+    flex: 0.5;
+    border: 1px solid grey;
+    padding: 10px;
 }
 
 
