--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -3,10 +3,12 @@
     background: #b3bbc0;
     padding: 2px;
     margin: 5px;
+    transition: all 500ms ease;
 }
 
 .post:hover {
     background: #d4d8d9;
+    border-radius: 20px;
 }
 
 .posts {
