--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -11,14 +11,20 @@
     height: 50px;
     font-size: 24px;
     background: #cbcbcb;
-    transition: #931010 500ms ease;
+    transition: all 500ms ease;;
 }
 
 .buttContainer a {
     text-decoration: none;
-
 }
 
-.buttContainer button:active {
-    background: #abaaaa;
+.buttContainer button:hover {
+    background: #8d8d8d;
+    border-radius: 10px;
+    color: white;
+}
+
+.buttContainer a button[class='active']  {
+    color: brown;
+    background: rebeccapurple;
 }
