--- a/src/Components/Episode/Episode.module.css
+++ b/src/Components/Episode/Episode.module.css
@@ -53,8 +53,8 @@
 .episode h3 {
     margin: 5px;
     text-align: center;
-    font-size: 18px;
-    color: #1f5a83;
+    font-size: 16px;
+    color: #174b73;
 }
 
 .episode a{
