--- a/src/Components/forms.module.css
+++ b/src/Components/forms.module.css
@@ -40,3 +40,8 @@
     border-radius: 5px;
     box-shadow: 0 0 20px #7bbafa;
 }
+
+.form3 :nth-child(3) {
+    margin-right: 10px;
+    margin-left: 10px;
+}
