--- a/src/components/Form/Forms.module.css
+++ b/src/components/Form/Forms.module.css
@@ -3,12 +3,14 @@
     column-gap: 50px;
     justify-content: center;
     margin: 30px 0;
+    padding: 0 200px;
 }
 
 .box {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding: 0 200px;
+    column-gap: 50px;
 }
 
 .b {
