--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,3 +1,11 @@
 .update {
     background: lightblue;
+    transition: all 2000ms ease;
+    height: 60px;
+}
+.send {
+    background: #ececec;
+    transition: all 2000ms ease;
+    height: 60px;
+
 }
