--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,11 +1,48 @@
-.update {
-    background: lightblue;
+.update, .send {
+    display: flex;
+    flex-direction: column;
+    background: lightskyblue;
+    font-size: 20px;
     transition: all 2000ms ease;
-    height: 60px;
+    height: 80px;
+    width: 1000px;
+    margin-bottom: 20px;
 }
-.send {
-    background: #ececec;
-    transition: all 2000ms ease;
-    height: 60px;
 
+.send {
+    background: #eeeeee;
+}
+
+.update > div, .send > div {
+    display: flex;
+    gap: 20px;
+    margin: 10px auto auto;
+}
+
+.hide {
+    margin: 0;
+    color: darkblue;
+    display: block;
+    justify-self: flex-end;
+}
+
+.update > div > button, .send > div > button {
+    margin: auto;
+    font-size: 16px;
+    height: 26px;
+    border-radius: 5px;
+    border: 2px solid darkblue;
+    width: 100px;
+}
+
+.send > div > button {
+    border: 2px solid #8f8f8f;
+}
+
+.send > div > button:hover {
+    background: #8f8f8f;
+}
+
+.update > div > button:hover {
+    background: #29baff;
 }
