--- a/src/components/Cars/Cars.module.css
+++ b/src/components/Cars/Cars.module.css
@@ -2,10 +2,17 @@
     background: #bbbbbb;
     border-radius: 10px;
     padding: 10px;
-    width: 200px;
+    width: 300px;
     transition: all 500ms ease;
 }
 
 .car:hover {
     background: #e0e0e0;
+}
+
+.cars {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
 }
