--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -2,15 +2,17 @@
     border-radius: 5px;
     background: #b3bbc0;
     padding: 2px;
-    margin: 5px;
     transition: all 500ms ease;
+    width: 300px;
 }
 
 .post:hover {
     background: #d4d8d9;
-    border-radius: 20px;
 }
 
 .posts {
-    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
 }
