Redux_add_counter

--- a/src/components/Events/Events.module.css
+++ b/src/components/Events/Events.module.css
@@ -5,7 +5,7 @@
 }
 
 .checked {
-    text-decoration: line-through;
+    text-decoration: line-through 2px #72008b;
 }
 .unchecked {
     text-decoration: none;
